syntax = "proto3";

package service;

import "status_response.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";


option java_package = "ar.edu.itba.pod.grpc";
option java_outer_classname = "AdminServiceModel";
option java_multiple_files = true;

service AdminService {
  rpc AddSector(google.protobuf.StringValue) returns (AddSectorResponse);
  rpc AddCounters(AddCountersRequest) returns (AddCountersResponse);
  rpc Manifest(stream ManifestRequest) returns (stream ManifestResponse);
}

message AddSectorResponse {
  string sector_name = 1;
  StatusResponse status = 2;
}
message AddCountersResponse {
  string sector_name = 1;
  int32 counter_count = 2;
  int32 firstCounterNumber = 3;
  int32 lastCounterNumber = 4;
  StatusResponse status = 5;
}

message BookingData {
  string booking_code = 1;
  string flight_code = 2;
  string airline_name = 3;
}

message AddCountersRequest {
  string sector_name = 1;
  int32 counter_count = 2;
}

message ManifestRequest {
  BookingData passenger = 1;
}

message ManifestResponse {
  BookingData passenger = 1;
  StatusResponse status = 2;
}
